# Old-Guitarist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: Editor.cpp  Editor.h  Processor.cpp  Processor.h
source/dsp/: IRConvolution.h
source/model/: StringParams.h  WaveSolver.cpp  WaveSolver.h
source/synth/: GuitarSynth.h  Sound.h  Voice.cpp  Voice.h
source/ui/: Keyboard.cpp  Keyboard.h  StringVisualizer.cpp  StringVisualizer.h
